--- a/src/styles/cart.module.css
+++ b/src/styles/cart.module.css
@@ -4,6 +4,7 @@
     justify-content: center;
     width: 100%;
     background: F0F0F0;
+    flex: 1;
 }
 
 .container {
@@ -11,6 +12,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+    min-height: 100vh;
 }
 
 @media (max-width: 660px) {
