--- a/src/styles/order.module.css
+++ b/src/styles/order.module.css
@@ -5,9 +5,13 @@
     align-items: center;
     width: 100%;
     background: F0F0F0;
+    flex: 1;
 }
 
 .container {
     max-width: 1200px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
